# forte_rc_robot

./: LICENSE  README.md
FORTE_ROSv10/: manifest.xml
FORTE_ROSv10/launch/: display (copy).launch  display.launch  gazebo.launch
FORTE_ROSv10/meshes/: linkArm1.STL  linkMover1.STL  linkMover2.STL  linkMover4.STL  linkWheelLB.STL  linkWheelLF.STL  linkWheelRB.STL  linkWheelRF.STL
FORTE_ROSv10/robots/: FORTE_ROSv10.URDF
forte_rc_2dnav/: CMakeLists.txt  package.xml
forte_rc_2dnav/CTCV_3rd_floor_params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
forte_rc_2dnav/amcl/: amcl_CTCV_3rdFloor.launch
forte_rc_2dnav/launch/: dwa_forte_rc_CTCV_map.launch  move_base_forte_rc_CTCV_map.launch
forte_rc_2dnav/maps/: CTCV_3rdFloor.pgm  CTCV_3rdFloor.yaml
forte_rc_2dnav/rviz_configs/: Navigation.rviz
forte_rc_arduino_firmware/arduino_libs/AdafruitNeoPixel/: AdafruitNeoPixel.cpp
forte_rc_arduino_firmware/arduino_libs/AdafruitNeoPixelmaster/: AdafruitNeoPixel.cpp
forte_rc_arduino_firmware/arduino_libs/Robot/: Robot.cpp  Robot.h
forte_rc_arduino_firmware/arduino_libs/RobotSerialComm/: RobotSerialComm.cpp  RobotSerialComm.h
forte_rc_arduino_firmware/arduino_libs/Sonar_srf08/: Sonar_srf08.h
forte_rc_arduino_firmware/arduino_libs/ros_lib/: ros.h  ros.h~
forte_rc_arduino_firmware/arduino_libs/ros_lib/ros/: node_handle.h  node_handle.h~
forte_rc_arduino_firmware/arduino_libs/ros_lib/std_msgs/: UInt8.h~
forte_rc_arduino_firmware/forte_rc_firmware/: Robot.cpp  Robot.h  RobotSerialComm.cpp  RobotSerialComm.h  forte_rc_firmware.ino
forte_rc_cloud/: CMakeLists.txt  package.xml
forte_rc_cloud/launch/: cloud_bring_up.launch  remap_cloud_cmd_vel.launch
forte_rc_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
forte_rc_description/launch/: display.launch  gazebo.launch  rviz_forte_rc_display.launch  rviz_forte_rc_display_teste_apagar.launch
forte_rc_description/meshes/: linkArm2.STL  linkArm3.STL  linkArm4.STL  linkArm5.STL  linkArm6.STL  linkHead1.STL  linkHead2.STL  linkMover3.STL  linkMover5.STL
forte_rc_description/robots/: FORTE_ROSv10.URDF  forte_rc (copy).urdf  forte_rc.urdf
forte_rc_description/rviz_configs/: FORTE.rviz  forte_rc_rviz_conf.rviz
forte_rc_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
forte_rc_driver/include/rs232/: rs232.h
forte_rc_driver/launch/: bring_up_forterc.launch  cpr_mover6.launch  forte_rc_description.launch  forte_rc_description_lasers.launch  forte_rc_wii_teleop.launch  laserscan_multi_merger.launch  pololu_servos.launch  pololu_servos_moveit.launch
forte_rc_driver/scripts/: Mover6.sh  start.sh
forte_rc_driver/src/: forte_rc_head_control.cpp  remap_pololu_motors_to_joints_state.cpp  serial3_arduino_start.cpp
forte_rc_driver/src/rs232/: rs232.cpp
forte_rc_driver/yaml_files/: pololu_motors.yaml
forte_rc_mapping_slam/: CMakeLists.txt  package.xml
forte_rc_mapping_slam/launch/: create_map_slam_gmapping.launch  save_map_with_name.sh
forte_rc_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
forte_rc_robot/launch/: bring_up_forterc.launch  bring_up_forterc_navigation.launch  kinect2_bridge.launch  teleop_wii_forterc.launch
forte_rc_robot/launch/lasers/: laser_merger.launch  lasers.launch
forte_rc_robot/rviz_configs/: mover6_plugin_rviz.rviz
forte_rc_robot/scripts/: forte_rc_bringup.sh  forte_rc_bringup_full.sh  forte_rc_bringup_navigation.sh  forte_rc_bringup_wii_teleop.sh  forte_rc_mover6.sh
forte_rc_robot/scripts/mapping/: mapping_bringup_teleop_wii_rviz.sh  save_map_with_name.sh
forte_rc_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
forte_rc_teleop/launch/: teleop_wii_forterc.launch
forte_rc_teleop/src/: forte_rc_teleop_wii.cpp
forte_rc_teleop/wii_buttons_layout/: wii_buttons_layout
