<?xml version="1.0"?>
<package>
  <name>forte_rc_2dnav</name>
  <version>1.0.5</version>
  <description>The forte_rc_2dnav package</description>

  <maintainer email="support@ingeniarius.pt">Ingeniarius,ltd</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ingeniarius/ForteRC/forte_rc_2dnav</url>
  <author email="support@ingeniarius.pt">Ingeniarius, Ltd.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <run_depend>move_base</run_depend>

  <export>
  
  </export>
</package>
