<?xml version="1.0"?>
<package>
  <name>forte_rc_cloud</name>
  <version>1.0.5</version>
  <description>The forte_rc_cloud package</description>

  <maintainer email="support@ingeniarius.pt">Ingeniarius,ltd</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ingeniarius/ForteRC/forte_rc_cloud</url>
  <author email="support@ingeniarius.pt">Ingeniarius, Ltd.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
