<?xml version="1.0"?>
<package>
  <name>forte_rc_driver</name>
  <version>1.0.2</version>
  <description>The forte_rc_driver package</description>

  <maintainer email="support@ingeniarius.pt">Ingeniarius, Ltd.</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ingeniarius/ForteRC/FORTERC_driver</url>
  <author email="support@ingeniarius.pt">Ingeniarius, Ltd.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cpr_mover</run_depend>
  <run_depend>iai_kinect2</run_depend>
  <run_depend>libfreenect2</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>ira_laser_tools</run_depend>
  <run_depend>joystick_drivers</run_depend>
  <run_depend>ros_pololu_servo</run_depend>
  <run_depend>rosserial</run_depend>
  <run_depend>rviz</run_depend>

</package>
