<?xml version="1.0"?>
<package>
  <name>forte_rc_mapping_slam</name>
  <version>1.0.5</version>
  <description>The forte_rc_mapping_slam package</description>

  <maintainer email="support@ingeniarius.pt">Ingeniarius, Ltd.</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ingeniarius/ForteRC/forte_rc_mapping_slam</url>
  <author email="support@ingeniarius.pt">Ingeniarius, Ltd.</author>  


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
