<?xml version="1.0"?>
<package>
  <name>forte_rc_robot</name>
  <version>1.0.0</version>
  <description>The forte_rc_robot package</description>

  <maintainer email="welcome@ingeniarius.pt">Ingeniarius, Ltd.</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ingeniarius/ForteRC</url>
  <author email="support@ingeniarius.pt">Ingeniarius, Ltd.</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  
  <run_depend>forte_rc_description</run_depend>
  <run_depend>forte_rc_driver</run_depend>
  <run_depend>forte_rc_teleop</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
